--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+7
+version: 1.0.0+8
 
 environment:
   sdk: ^3.5.3
@@ -52,6 +52,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   provider: ^6.1.2
   mobile_scanner: ^5.2.3
+  carousel_slider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +72,7 @@ flutter:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "assets/logo.png"
+  image_path: "assets/logo_launcher.png"
   remove_alpha_ios: true  
   
 flutter_intl:
