--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,29 +4,11 @@ description: "A community app for RealT"
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+8
+version: 1.0.0+10
 
 environment:
   sdk: ^3.5.3
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -53,6 +35,8 @@ dependencies:
   provider: ^6.1.2
   mobile_scanner: ^5.2.3
   carousel_slider: ^5.0.0
+  flutter_native_splash: ^2.4.1
+
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +50,7 @@ flutter:
   assets:
     - assets/logo.png
 
-  uses-material-design: true
-
+uses-material-design: true
 
 flutter_launcher_icons:
   android: true
@@ -79,3 +62,14 @@ flutter_intl:
   enabled: true
   arb_dir: lib/l10n  # Directory where your .arb files are stored
   output_dir: lib/generated  # Directory for the generated localization file
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/logo.png
+  android: true
+  ios: true
+  android_12:
+    icon_background_color: "#ffffff" # Arrière-plan de l'icône pour Android 12+
+  web: false
+  ios_content_mode: scaleAspectFit
+
