--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -51,4 +51,13 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
+     <!-- for Url Luncher -->
+    <queries>
+        <intent>
+        <action android:name="android.intent.action.VIEW" />
+        <category android:name="android.intent.category.BROWSABLE" />
+        <data android:scheme="https" />
+        </intent>
+    </queries>
 </manifest>
