--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: "A community app for RealT"
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+17
+version: 1.0.0+20
 
 environment:
   sdk: ^3.5.3
@@ -18,7 +18,7 @@ dependencies:
   firebase_analytics: ^10.10.7
   firebase_crashlytics: ^3.5.7
   intl: ^0.19.0
-  path_provider: ^2.0.11 
+  path_provider: ^2.1.4
   shared_preferences: ^2.0.11
   hive: ^2.0.0
   hive_flutter: ^1.1.0
@@ -37,6 +37,10 @@ dependencies:
   carousel_slider: ^5.0.0
   flutter_native_splash: ^2.4.1
   logger: ^2.4.0
+  share_plus: ^10.1.0
+  file_picker: ^8.1.3
+  archive: ^3.6.1
+
 
 
 dev_dependencies:
@@ -50,6 +54,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/logo.png
+    - assets/RealT_Logo.png
+
   uses-material-design: true
 
 flutter_launcher_icons:
