--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
-name: RealToken
+name: real_token
 description: "A community app for RealT"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+20
+version: 1.0.0+22
 
 environment:
   sdk: ^3.5.3
