--- a/.github/workflows/flutter-windows.yml
+++ b/.github/workflows/flutter-windows.yml
@@ -25,9 +25,11 @@ jobs:
       uses: subosito/flutter-action@v2
       with:
         flutter-version: '3.24.3'
-    
-    - name: Verify Flutter installation
-      run: flutter --version
+
+    - name: Enable Windows desktop support
+      run: |
+        flutter config --enable-windows-desktop
+        flutter create .
 
     - name: Install dependencies
       run: flutter pub get
@@ -36,7 +38,7 @@ jobs:
       run: flutter build windows
 
     - name: Upload Windows build
-      uses: actions/upload-artifact@v3  # Mise à jour vers la version v3
+      uses: actions/upload-artifact@v3
       with:
         name: windows-build
         path: build/windows/runner/Release/
